Fix jumpy animation logo

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -152,7 +152,7 @@ nav {
  }
 }
 
-/*@-webkit-keyframes triangle-outline {
+@-webkit-keyframes triangle-outline {
   0% {
     opacity: 0;
     stroke-dashoffset: 110;
@@ -161,19 +161,19 @@ nav {
   25% {
     opacity: 1;
     stroke-dashoffset:0;
-    fill-opacity: 0;
+    fill-opacity: .25;
   }
   50% {
     opacity: 1;
     stroke-dashoffset:0;
-    fill-opacity: 0;
+    fill-opacity: .75;
   }
   100% {
    fill-opacity: 1;
    opacity: 1;
    stroke-dashoffset: 0;
   }
-}*/
+}
 
 @keyframes triangle-outline {
   0% {
@@ -291,8 +291,8 @@ nav {
 
 .menu-overlay {
   position: fixed;
-  background-image: -webkit-linear-gradient(right, rgba(43, 88, 118, 0.4), rgba(78, 67, 118, 0.98));
-  background-image: linear-gradient(to left, rgba(43, 88, 118, 0.4), rgba(78, 67, 118, 0.98));
+  background-image: -webkit-linear-gradient(right, rgba(43, 88, 118, 0.98), rgba(78, 67, 118, 0.98));
+  background-image: linear-gradient(to left, rgba(43, 88, 118, 0.98), rgba(78, 67, 118, 0.98));
   top: 0;
   left: 0;
   width: 100%;
